--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
           </li>
 
           <li class="nav-item">
@@ -38,6 +38,10 @@
 
           <li class="nav-item">
             <a class="nav-link" href="collaboration.html" tabindex="-1">Collaboration</a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
 
           <li class="nav-item">
