--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,11 @@
             <a class="nav-link" href="collaboration.html" tabindex="-1">Collaboration</a>
           </li>
 
+          <!--
           <li class="nav-item active">
-            <a class="nav-link" href="blog.html">Blog</a>
+            <span class="nav-link" href="blog.html">Blog</span>
           </li>
+          -->
 
           <li class="nav-item">
             <a class="nav-link" href="who.html" tabindex="-1">Who</a>
