--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,10 @@
             <a class="nav-link" href="collaboration.html" tabindex="-1">Collaboration</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="events.html" tabindex="-1">Events</a>
+          </li>
+
           <!--
           <li class="nav-item active">
             <span class="nav-link" href="blog.html">Blog</span>
