--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,59 +8,41 @@
     <meta name="author" content="Species File Group">
     
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="generator" content="Jekyll 4.0">
+    <meta name="generator" content="Jekyll 3.9">
     <link rel="canonical" href="http://speciesfilegroup.org">
   </head>
 
   <body>
-    <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="index.html">Species File Group</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-          </li>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+      <div class="container-fluid">
+        
+        <a class="navbar-brand" href="index.html">Species File Group</a>
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <li class="nav-item">
-            <a class="nav-link" href="software.html">Software</a>
-          </li>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
 
-          <li class="nav-item">
-            <a class="nav-link" href="data.html" tabindex="-1">Data</a>
-          </li>
+            {% for item in site.data.top_nav.items %}
+            {% if page.url == item.url %}{% assign current = true %}{% else %}{% assign current = false %}{% endif %}
+               <li class="nav-item">
+               <a class="nav-link {% if current %}active{% endif %}" {% if current %}aria-current="page"{% else %} tabindex="-1"{% endif %}  href="{{ item.url }}">
+               {{ item.name }}
+               </a>
+            </li>
+            {% endfor %}
 
-          <li class="nav-item">
-            <a class="nav-link" href="collaboration.html" tabindex="-1">Collaboration</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="events.html" tabindex="-1">Events</a>
-          </li>
-
-          <!--
-          <li class="nav-item active">
-            <span class="nav-link" href="blog.html">Blog</span>
-          </li>
-          -->
-
-          <li class="nav-item">
-            <a class="nav-link" href="who.html" tabindex="-1">Who</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="about.html" tabindex="-1">About</a>
-          </li>
-        </ul>
+          </ul>
+        </div>
       </div>
     </nav>
-    </header>
+
 
     <main role="main">
       <div class="container ">
