--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,11 @@
     <meta name="description" content="Homepage of the Species File Group.">
     <meta name="keywords" content="SpeciesFiles,3i,CoL,Catalog Of Life,Global Names,TaxonWorks,Biodiversity Informatics,Taxonomy,Species,DataScience,Species File Group">
     <meta name="author" content="Species File Group">
-    
+
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="generator" content="Jekyll 3.9">
     <link rel="canonical" href="http://speciesfilegroup.org">
@@ -19,9 +20,9 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
       <div class="container-fluid">
-        
+
         <a class="navbar-brand" href="index.html">Species File Group</a>
-        
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,10 +32,10 @@
 
             {% for item in site.data.top_nav.items %}
             {% if page.url == item.url %}{% assign current = true %}{% else %}{% assign current = false %}{% endif %}
-               <li class="nav-item">
-               <a class="nav-link {% if current %}active{% endif %}" {% if current %}aria-current="page"{% else %} tabindex="-1"{% endif %}  href="{{ item.url }}">
-               {{ item.name }}
-               </a>
+            <li class="nav-item">
+              <a class="nav-link {% if current %}active{% endif %}" {% if current %}aria-current="page"{% else %} tabindex="-1"{% endif %}  href="{{ item.url }}">
+                {{ item.name }}
+              </a>
             </li>
             {% endfor %}
 
@@ -46,25 +47,11 @@
 
     <main role="main">
       <div class="container ">
-            {{ content }}
+        {{ content }}
       </div>
     </main>
 
-    <footer class="container">
-      <p style="font-size:8pt;"> disclaimer: this site uses Google Analytics</p>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-85440666-2', 'auto');
-      ga('send', 'pageview');
-    </script>
+    {% include footer.html %}
+    {% include javascript.html %}
   </body>
 </html>
